[package]
name = "play-song"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
id3 = "0.6.4"
mp4ameta = "0.11.0"
redlux = "0.4.0"
rodio = "0.14.0"
tokio = { version = "1.9.0", features = ["full"] }
walkdir = "2.3.2"

